amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/introspection-root.api.federation.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/introspection-root.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 3

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#DomainElement-name-invalidIntrospectionName
  Message: Name must not begin with '__' as this is used exclusively by GraphQL’s introspection system
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/introspection-root.api.graphql#/declares/shape/__Query
  Property: http://www.w3.org/ns/shacl#name
  Range: [(5,5)-(5,12)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#DomainElement-name-invalidIntrospectionName
  Message: Name must not begin with '__' as this is used exclusively by GraphQL’s introspection system
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/introspection-root.api.graphql#/declares/shape/__Query/supportedOperation/__string
  Property: http://a.ml/vocabularies/core#name
  Range: [(6,4)-(6,12)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#DomainElement-name-invalidIntrospectionName
  Message: Name must not begin with '__' as this is used exclusively by GraphQL’s introspection system
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/introspection-root.api.graphql#/declares/shape/__Query/supportedOperation/__string/expects/request/parameter/parameter/__arg
  Property: http://a.ml/vocabularies/core#name
  Range: [(6,13)-(6,18)]
  Location: 
